
NOTE : this modified version is still under the Artistic License 2.0

- Improved location recognition engine for Senchal type cities where no city subzones are defined.
- In the wilderness of Blackwood, the add-on automatically recognizes you are in the adventure zone.
- Updated location database for Blackwood Chapter. Leyawiin and Gideon are now recognized as cities.
[IdleEmotes]
- Adjusted the Camera Spin Disabler feature to enable the preview button in the endeavor seal store introduced in Update 30.

Version 1.6.83 : by Calamath
[HotFix]
- Fixed a bug that the in-game outfit preview feature did not work in daily login reward scene and eso plus offer scene when using the Camera Spin Disabler.

Version 1.6.82 : by Calamath
[LorePlay]:Flames of Ambition support
- Adjusted location database of Vivec City and Alinor Royal Palace.
- Updated API version to 100034 (ESO 6.3.x : Flames of Ambition)
- Updated embedded LibEventHandler version to 1.2.94 (AddOnVersion: 1294).
[IdleEmotes]
- Optimized the Camera Spin Disabler feature for compatibility with the inventory furniture preview introduced in update 29.

Version 1.6.81 : by Calamath
[HotFix]
- Fixed a bug that the in-game furniture preview feature did not work when using the Camera Spin Disabler.

Version 1.6.80 : by Calamath
[SmartEmotes]
- Addressed an issue inherited from the original version where the game would hang up when performing SmartEmote twice in a row just after swimming or running out of stamina.
[IdleEmotes]
- Addressed an issue that could cause a UI error when performing IdleEmotes immediately after login.

Version 1.6.79 : by Calamath
- code cleanup and refactoring

Version 1.6.78 : by Calamath
[IdleEmotes]
- No longer allowed performing idle emotes by default while in housing editor mode. No more frustration when arranging your furniture.
- Suppressed the error message, 'Cannot play emote at this time' in various situations.
- Optimized the Camera Spin Disabler feature.
