@@ -8,6 +8,8 @@ NOTE : this modified version is still under the Artistic License 2.0
 - Improved location recognition engine for Senchal type cities where no city subzones are defined.
 - In the wilderness of Blackwood, the add-on automatically recognizes you are in the adventure zone.
 - Updated location database for Blackwood Chapter. Leyawiin and Gideon are now recognized as cities.
+[LoreWear]
+- Addressed API changes regarding GameplayActorCategory.
 [IdleEmotes]
 - Adjusted the Camera Spin Disabler feature to enable the preview button in the endeavor seal store introduced in Update 30.
 
